<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#079105"
    tools:context="com.sa.agd.gameofchoice.QuizActivity"

    >

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/extra_help_line_part"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:background="#079105"
        android:padding="8dp">


        <TextView
            android:background="@drawable/buttons_style_other"
            android:id="@+id/level_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:text="@string/label"
            android:textColor="#fff"
            android:textSize="16sp" />

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/level_counter"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_weight="2"
            android:src="@drawable/levelb1"
            android:textColor="#fff"
            />

        <Button
            android:visibility="invisible"
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".4"

            android:background="@drawable/buttons_style"
            android:text="Bonus Line"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/usernameB"
            android:text="@string/userText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:textColor="#fff"
            android:textSize="18sp"
            android:background="@drawable/buttons_style_other"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:visibility="invisible"
            android:id="@+id/other2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".4"

            android:background="@drawable/buttons_style"
            android:text="Bonus Line"
            android:textColor="#ffffff" />
        <Button
            android:id="@+id/new_game_button"
            android:layout_below="@+id/game_score_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttons_style"
            android:text="@string/newGame"
            android:textColor="#ffffff" />



        <Button
            android:id="@+id/exit_game_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_below="@+id/score_button"
            android:background="@drawable/buttons_style"
            android:layout_marginBottom="10dp"
            android:text="@string/exitGame"
            android:textColor="#ffffff"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/center_main_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical"
        android:padding="5dp">

        <RelativeLayout

            android:id="@+id/question_progress_switch_part"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/buttons_style_other2">

            <TextView
                android:layout_margin="5dp"
                android:id="@+id/question_coutner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/buttons_style_confirm"
                android:padding="10dp"
                android:text="@string/questionName"
                android:textColor="#ffffff"
                android:textSize="25.0sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/time_counter"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="100dp"
                android:layout_height="5dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:indeterminate="false"
                android:max="30"
                android:progress="0"
                android:progressBackgroundTint="#ffffff"
                android:progressDrawable="@drawable/horizontal_progress" />

            <TextView
                android:layout_margin="5dp"
                android:id="@+id/point_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/buttons_style_confirm"
                android:padding="10dp"
                android:text="@string/earnText"
                android:textColor="#ffffff"
                android:textSize="25.0sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/questions_appear_part"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/buttons_style_other3"
            android:orientation="horizontal"
            >

            <TextView

                android:id="@+id/question_show"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/questions"
                android:textColor="@android:color/black"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_submit_part"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_style"
            android:orientation="horizontal">

            <Button
                android:id="@+id/lock_it_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="150dp"
                android:layout_marginRight="150dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_style_confirm"
                android:text="@string/submitButton"
                android:textColor="#ffffff"
                android:textSize="20sp" />
            />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_selection_part"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@drawable/buttons_style_other3"
            android:orientation="horizontal">

            <Button
                android:padding="6dp"
                android:id="@+id/option_a"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg_round_corners"
                android:text="@string/OptionA" />

            <Button
                android:padding="6dp"
                android:id="@+id/option_b"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg_round_corners"
                android:text="@string/OptionB" />

            <Button
                android:padding="6dp"
                android:id="@+id/option_c"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg_round_corners"
                android:text="@string/OptionC" />

            <Button
                android:padding="6dp"
                android:id="@+id/option_d"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg_round_corners"
                android:text="@string/OptionD" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_help_line_part"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:background="#079105"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:background="@drawable/buttons_style_other"
            android:id="@+id/help_line_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:text="@string/helpLine"
            android:textColor="#fff"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/helpLine_one"
            android:background="@drawable/buttons_style_other3"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/halfb1" />

        <ImageView
            android:background="@drawable/buttons_style_other3"
            android:id="@+id/helpLine_three"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginBottom="5dp"
            android:src="@drawable/percent1" />
        <ImageView
            android:id="@+id/helpLine_two"
            android:background="@drawable/buttons_style_other3"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/renew" />




    </LinearLayout>


</LinearLayout>
